--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -191,7 +191,7 @@ section {
         }
     }
 }
-.intro-wrap {
+.parallax-wrap .intro-wrap {
     display: block;
     p {
         display: block;
