--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -592,9 +592,11 @@ section {
     // margin-top: -321px;
     text-align: left;
     width: 698px;
+    max-height: 600px;
     background: #FFF;
     color:$dark-gray;
     border:6px solid $purple;
+    overflow: auto;
     .jqmClose {
         color:#fff;
         position: absolute;
