更改分会场字号

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -436,7 +436,7 @@ section {
                         .topic {
                             float: left;
                             margin-left: 20px;
-                            font-size: $font-xlg;
+                            font-size: $font-lg;
                             color:$dark-gray;
                         }
                         .name {
