更新嘉宾说明

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -500,6 +500,9 @@ section {
                     margin-bottom: 10px;
                 }
                 .intro {
+                    width: 80%;
+                    margin-left: auto;
+                    margin-right: auto;
                     font-size: $font-md;
                 }
             }
