更新合作伙伴，所有图片用cdn

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -474,31 +474,28 @@ section {
         #special-guest .guest-wrap .guest .mask .name {
           font-size: 18px;
           margin-top: 10px;
-          margin-bottom: 10px; }
+          margin-bottom: 8px; }
         /* line 502, ../sass/index.scss */
         #special-guest .guest-wrap .guest .mask .intro {
-          width: 80%;
-          margin-left: auto;
-          margin-right: auto;
-          font-size: 14px; }
+          font-size: 12px; }
       /* line 510, ../sass/index.scss */
       #special-guest .guest-wrap .guest:hover .mask, #special-guest .guest-wrap .guest:focus .mask {
         display: block; }
       /* line 514, ../sass/index.scss */
       #special-guest .guest-wrap .guest.guest-1 {
-        background-image: url(../imgs/guest/guest-s-James-Landay-2x.png); }
+        background-image: url(http://gtms01.alicdn.com/tps/i1/TB1L.RHHpXXXXaZXXXXUUuLRFXX-376-582.jpg); }
       /* line 517, ../sass/index.scss */
       #special-guest .guest-wrap .guest.guest-2 {
-        background-image: url(../imgs/guest/guest-s-tangmu-2x.png); }
+        background-image: url(http://gtms04.alicdn.com/tps/i4/TB1H_BGHpXXXXccXXXXUUuLRFXX-376-582.jpg); }
       /* line 520, ../sass/index.scss */
       #special-guest .guest-wrap .guest.guest-3 {
-        background-image: url(../imgs/guest/guest-s-Willy-Lai-2x.png); }
+        background-image: url(http://gtms03.alicdn.com/tps/i3/TB1UDxDHpXXXXbCXpXXUUuLRFXX-376-582.jpg); }
       /* line 523, ../sass/index.scss */
       #special-guest .guest-wrap .guest.guest-4 {
-        background-image: url(../imgs/guest/guest-s-xuyingqing-2x.png); }
+        background-image: url(http://gtms04.alicdn.com/tps/i4/TB1E5lIHpXXXXXIXXXXUUuLRFXX-376-582.jpg); }
       /* line 526, ../sass/index.scss */
       #special-guest .guest-wrap .guest.guest-5 {
-        background-image: url(../imgs/guest/guest-s-yinshengyuan-2x.png); }
+        background-image: url(http://gtms02.alicdn.com/tps/i2/TB1Y.REHpXXXXaZXpXXUUuLRFXX-376-582.jpg); }
 
 /* line 538, ../sass/index.scss */
 #guest .title.guest-title {
@@ -532,35 +529,35 @@ section {
   #guest .guest-mod .name {
     font-size: 16px;
     margin-top: 20px;
-    margin-bottom: 10px; }
-  /* line 571, ../sass/index.scss */
+    margin-bottom: 8px; }
+  /* line 570, ../sass/index.scss */
   #guest .guest-mod .intro {
     font-size: 12px; }
 
-/* line 578, ../sass/index.scss */
+/* line 577, ../sass/index.scss */
 #partner .title.partner-title {
   background-position: 0 -619px;
   margin-bottom: 40px; }
-/* line 582, ../sass/index.scss */
+/* line 581, ../sass/index.scss */
 #partner .partner-wrap {
   margin-bottom: 20px;
   padding-left: 25px;
   padding-right: 25px;
   font-size: 0; }
-/* line 588, ../sass/index.scss */
+/* line 587, ../sass/index.scss */
 #partner .partner-logo {
   display: inline-block;
   width: 120px;
   height: 50px;
   margin-right: 17px; }
-  /* line 597, ../sass/index.scss */
+  /* line 596, ../sass/index.scss */
   #partner .partner-logo:last-child {
     margin-right: 0; }
 
 /**
  * Modal
  */
-/* line 606, ../sass/index.scss */
+/* line 605, ../sass/index.scss */
 .modal-dialog {
   display: none;
   position: fixed;
@@ -574,7 +571,7 @@ section {
   color: #555;
   border: 6px solid #0b2998;
   overflow: auto; }
-  /* line 621, ../sass/index.scss */
+  /* line 620, ../sass/index.scss */
   .modal-dialog .jqmClose {
     color: #fff;
     position: absolute;
@@ -582,65 +579,65 @@ section {
     top: 20px;
     font-size: 32px;
     z-index: 10; }
-  /* line 629, ../sass/index.scss */
+  /* line 628, ../sass/index.scss */
   .modal-dialog .modal-header {
     height: 111px;
     background-color: #fed939;
     position: relative;
     padding-left: 160px; }
-    /* line 634, ../sass/index.scss */
+    /* line 633, ../sass/index.scss */
     .modal-dialog .modal-header .photo {
       position: absolute;
       border-radius: 50%;
       top: 20px;
       left: 40px;
       background-color: #f6f6f6; }
-    /* line 641, ../sass/index.scss */
+    /* line 640, ../sass/index.scss */
     .modal-dialog .modal-header .name {
       padding-top: 45px;
       margin-bottom: 10px;
       font-size: 18px; }
-    /* line 646, ../sass/index.scss */
+    /* line 645, ../sass/index.scss */
     .modal-dialog .modal-header .title {
       font-size: 14px; }
-  /* line 650, ../sass/index.scss */
+  /* line 649, ../sass/index.scss */
   .modal-dialog .modal-body {
     padding: 40px; }
-    /* line 652, ../sass/index.scss */
+    /* line 651, ../sass/index.scss */
     .modal-dialog .modal-body .intro-wrap {
       margin-bottom: 25px; }
-      /* line 654, ../sass/index.scss */
+      /* line 653, ../sass/index.scss */
       .modal-dialog .modal-body .intro-wrap p {
         text-indent: 2em;
         line-height: 1.8em;
         font-size: 14px; }
-    /* line 660, ../sass/index.scss */
+    /* line 659, ../sass/index.scss */
     .modal-dialog .modal-body .topic-wrap {
       margin-bottom: 25px; }
-      /* line 662, ../sass/index.scss */
+      /* line 661, ../sass/index.scss */
       .modal-dialog .modal-body .topic-wrap .topic {
         margin-top: 20px;
         margin-bottom: 10px;
         font-size: 18px; }
-      /* line 667, ../sass/index.scss */
+      /* line 666, ../sass/index.scss */
       .modal-dialog .modal-body .topic-wrap p {
         line-height: 1.8em;
         font-size: 14px; }
-    /* line 672, ../sass/index.scss */
+    /* line 671, ../sass/index.scss */
     .modal-dialog .modal-body .datetime-wrap {
       margin-top: 10px;
       font-size: 14px; }
-      /* line 673, ../sass/index.scss */
+      /* line 672, ../sass/index.scss */
       .modal-dialog .modal-body .datetime-wrap .iconfont {
         margin-right: 10px; }
-    /* line 679, ../sass/index.scss */
+    /* line 678, ../sass/index.scss */
     .modal-dialog .modal-body .location-wrap {
       margin-top: 10px;
       font-size: 14px; }
-      /* line 680, ../sass/index.scss */
+      /* line 679, ../sass/index.scss */
       .modal-dialog .modal-body .location-wrap .iconfont {
         margin-right: 10px; }
 
-/* line 689, ../sass/index.scss */
+/* line 688, ../sass/index.scss */
 .jqmOverlay {
   background-color: #fff; }
