--- a/src/css/index.css
+++ b/src/css/index.css
@@ -177,7 +177,7 @@ section {
     bottom: 0;
     cursor: pointer;
     background-position: 0 -780px; }
-    /* line 59, ../../../../.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/compass-core-1.0.1/stylesheets/compass/utilities/sprites/_base.scss */
+    /* line 59, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/utilities/sprites/_base.scss */
     .hero-wrap .sign-up-btn:hover, .hero-wrap .sign-up-btn.signup-hover {
       background-position: 0 -658px; }
     /* line 209, ../sass/index.scss */
